RESOLVED FIXED129584
CodeBlock::hasDebuggerRequests() should returning a bool instead of an int
https://bugs.webkit.org/show_bug.cgi?id=129584
Summary CodeBlock::hasDebuggerRequests() should returning a bool instead of an int
Mark Lam
Reported 2014-03-02 15:01:31 PST
Trivial change. Patch coming.
Attachments
the patch. (1.24 KB, patch)
2014-03-02 15:03 PST, Mark Lam
no flags
Mark Lam
Comment 1 2014-03-02 15:03:46 PST
Created attachment 225613 [details] the patch.
Darin Adler
Comment 2 2014-03-02 15:26:22 PST
Comment on attachment 225613 [details] the patch. View in context: https://bugs.webkit.org/attachment.cgi?id=225613&action=review > Source/JavaScriptCore/bytecode/CodeBlock.h:880 > + bool hasDebuggerRequests() const { return !!m_debuggerRequests; } By the way, there is no need for the !! here. That was only needed in compilers that lacked bool support, but we don’t compile WebKit with those kinds of old compilers.
WebKit Commit Bot
Comment 3 2014-03-02 15:57:29 PST
Comment on attachment 225613 [details] the patch. Clearing flags on attachment: 225613 Committed r164954: <http://trac.webkit.org/changeset/164954>
WebKit Commit Bot
Comment 4 2014-03-02 15:57:31 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.