CodeBlock::hasDebuggerRequests() should returning a bool instead of an int. <https://webkit.org/b/129584>

Reviewed by Darin Adler.

* bytecode/CodeBlock.h:
(JSC::CodeBlock::hasDebuggerRequests):


Canonical link: https://commits.webkit.org/147634@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164954 268f45cc-cd09-0410-ab3c-d52691b4dbfc